<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="11dp"
        android:text="@string/txt1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="137dp"
        android:text="@string/txt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:text="@string/negrita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="@string/cursiva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="@string/check3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="118dp"
        android:layout_height="253dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1"
            tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2"
            tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3"
            tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4"
            tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/rb5"
            tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="@string/check4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:text="@string/txt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="143dp"
        android:layout_height="254dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="273dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb6"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb7" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb8" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb9" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/rb10" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>